@@ -1,3 +1,7 @@
+Plus1 WapStart Android SDK 2.1.4, 2012-12-25
+----------------------
+- Fix bug for case when timers are paused and activity was destroyed
+
 Plus1 WapStart Android SDK 2.1.3, 2012-11-08
 ----------------------
 - Resolve WebView collisions issue (see setDisabledWebViewCorePausing() method)
